libs/updraft_core/src/core_tests/snapshots/updraft_core__core__tests__recording__first_fix_starts_a_recording_and_later_fixes_append.snap
---
source: libs/updraft_core/src/core_tests/recording.rs
expression: effects
---
[
    StartRecording(
        Sample {
            utc: UtcInstant(
                1767268800000,
            ),
            position: LatLon {
                latitude: 50°,
                longitude: 6.000000000000001°,
            },
            altitude_msl: Some(
                MslAltitude(
                    199 m,
                ),
            ),
            vario: None,
            netto: None,
            relative_vario: None,
            wind: None,
        },
    ),
    RecordSample(
        Sample {
            utc: UtcInstant(
                1767268801000,
            ),
            position: LatLon {
                latitude: 50°,
                longitude: 6.000000000000001°,
            },
            altitude_msl: Some(
                MslAltitude(
                    199 m,
                ),
            ),
            vario: None,
            netto: None,
            relative_vario: None,
            wind: None,
        },
    ),
]
