libs/updraft_core/src/core_tests/snapshots/updraft_core__core__tests__recording__fix_at_or_up_to_30_seconds_before_the_last_sample_is_dropped.snap
---
source: libs/updraft_core/src/core_tests/recording.rs
expression: "record(&mut core, UTC - 30_001, 3_000)"
---
[
    StartRecording(
        Sample {
            utc: UtcInstant(
                1767268769999,
            ),
            position: LatLon {
                latitude: 50°,
                longitude: 6.000000000000001°,
            },
            altitude_msl: Some(
                MslAltitude(
                    199 m,
                ),
            ),
            vario: None,
            netto: None,
            relative_vario: None,
            wind: None,
        },
    ),
]
