libs/updraft_core/src/core_tests/snapshots/updraft_core__core__tests__recording__restore_derives_task_progress_from_the_recording.snap
---
source: libs/updraft_core/src/core_tests/recording.rs
expression: "(task.target, task.progress)"
---
(
    Some(
        2,
    ),
    TaskProgress {
        reached: 2,
        start: Some(
            TaskTime {
                unix_milliseconds: 1767268800450,
            },
        ),
        finish: None,
    },
)
