libs/updraft_core/src/core_tests/snapshots/updraft_core__core__tests__recording__restore_discards_a_recording_that_the_shell_stored_more_than_3_hours_ago.snap
---
source: libs/updraft_core/src/core_tests/recording.rs
expression: effects
---
[
    DiscardRecording,
    StartRecording(
        Sample {
            utc: UtcInstant(
                1767268801000,
            ),
            position: LatLon {
                latitude: 50°,
                longitude: 6.000000000000001°,
            },
            altitude_msl: Some(
                MslAltitude(
                    199 m,
                ),
            ),
            vario: None,
            netto: None,
            relative_vario: None,
            wind: None,
        },
    ),
]
