libs/updraft_core/src/core_tests/snapshots/updraft_core__core__tests__recording__restore_seeds_the_wind_from_the_last_sample.snap
---
source: libs/updraft_core/src/core_tests/recording.rs
expression: derived.wind
---
Some(
    DerivedWindInstruments {
        direction_degrees: 143.13010235415598,
        speed_meters_per_second: 5.0,
        stale: false,
    },
)
